--- a/views/NotFound.html
+++ b/views/NotFound.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>Home</title>
   </head>
   <body>
-    <h1>About</h1>
+    <img src="404.png">
   </body>
 </html>
