--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <h1>Hello world!!</h1>
+    <img src="test.jpg">
   </body>
 </html>
